--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
+sudo: false
+
 language: python
-  python:
-    - 3.6
-  script:
-    - run test.py
+
+python:
+  - 3.6
+
+script:
+  - coverage run test.py
+
+after_success:
+  - codecov
